--- a/examples/01.setup_env_path.ipynb
+++ b/examples/01.setup_env_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b3733fc2",
    "metadata": {},
    "outputs": [],
@@ -13,33 +13,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dc8f01e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "argoverse2 dataset setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7ba7f7d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Without setting up proper path, no Log IDs will be found\n",
     "argoverse2.list_log_ids()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "332b35cf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Please set this to your correct ArgoVerse sensor data root path\n",
+    "correct_root = \"/home/chad/Data/ArgoVerse/sensor/\"\n",
+    "\n",
+    "# setting up the correct path help argoverse2 automatically map Log IDs\n",
+    "# to correct data location and load data properly\n",
     "argoverse2.set_sensor_root(\n",
-    "    \"/Volumes/ChadData/ArgoVerse/sensor/\", overwrite=True\n",
+    "    correct_root,\n",
+    "    overwrite=False,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0a85d6c2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(850,\n",
+       " ['00a6ffc16ce93bc3a0606006e9893a1a',\n",
+       "  '01bb304d7bd835f8bbef7086b688e35e',\n",
+       "  '022af47699373e70be52f65420d52703'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(argoverse2.list_log_ids()), argoverse2.list_log_ids()[:3],"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f811212b",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# a demo of setting incorrect path\n",
+    "incorrect_root = \"/not_exist_directory/\"\n",
+    "\n",
+    "argoverse2.set_sensor_root(\n",
+    "    incorrect_root,\n",
+    "    overwrite=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ddb2ecdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, [])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(argoverse2.list_log_ids()), argoverse2.list_log_ids()[:3],"
    ]
@@ -50,35 +128,136 @@
    "metadata": {},
    "source": [
     "---\n",
-    "patch database"
+    "patch database setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fa290860",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "patch_db.list_valid_patch_keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bd9222fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_db.set_patch_root(\"/Volumes/ChadData/ArgoVerse/patches/\", overwrite=True)"
+    "# Please set this to your correct patches root path\n",
+    "correct_root = \"/home/chad/Data/ArgoVerse/changed_pcd/patches/\"\n",
+    "\n",
+    "# setting up the correct path help patch database automatically map\n",
+    "# patch_id to correct patch location and load patch properly\n",
+    "patch_db.set_patch_root(\n",
+    "    correct_root,\n",
+    "    overwrite=False,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "db4a8e18",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('BOLLARD', '0339f59e88'),\n",
+       " ('BOLLARD', '0554976c9c'),\n",
+       " ('BOLLARD', '05a24ecb3d')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patch_db.list_valid_patch_keys()[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b8ca045c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BOLLARD',\n",
+       " 'CONSTRUCTION_BARREL',\n",
+       " 'CONSTRUCTION_CONE',\n",
+       " 'MESSAGE_BOARD_TRAILER',\n",
+       " 'MOBILE_PEDESTRIAN_CROSSING_SIGN',\n",
+       " 'OFFICIAL_SIGNALER',\n",
+       " 'SIGN',\n",
+       " 'STOP_SIGN',\n",
+       " 'TRAFFIC_LIGHT_TRAILER',\n",
+       " 'TRUCK_CAB',\n",
+       " 'VEHICULAR_TRAILER'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all patch categories in the current patch database\n",
+    "set(map(lambda x: x[0], patch_db.list_valid_patch_keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d28f148c",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# a demo of setting incorrect path\n",
+    "incorrect_root = \"/not_exist_directory/\"\n",
+    "\n",
+    "patch_db.set_patch_root(\n",
+    "    incorrect_root,\n",
+    "    overwrite=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "562a90ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "patch_db.list_valid_patch_keys()[:3]"
    ]
@@ -88,25 +267,302 @@
    "id": "cf5d0054",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "SceneEdited Database (scene_db) setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "de11224d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scene_db.list_scene_ids()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "a4812745",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Please set this to your correct scene database root\n",
+    "correct_root = \"/home/chad/Data/ArgoVerse/changed_pcd/changed_pcd.2/\"\n",
+    "\n",
+    "# setting up the correct path help scene database auto map\n",
+    "# (scene_id, version) to correct patch location and load scene properly\n",
     "scene_db.set_scene_root(\n",
-    "    \"/home/chad/Data/ArgoVerse/changed_pcd/changed_pcd/\", overwrite=True\n",
+    "    correct_root,\n",
+    "    overwrite=False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9a87b7ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['00a6ffc16ce93bc3a0606006e9893a1a',\n",
+       " '01bb304d7bd835f8bbef7086b688e35e',\n",
+       " '022af47699373e70be52f65420d52703']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scene_db.list_scene_ids()[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "34a127c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('00a6ffc16ce93bc3a0606006e9893a1a', 'v0.add'),\n",
+       " ('00a6ffc16ce93bc3a0606006e9893a1a', 'v0.delete'),\n",
+       " ('00a6ffc16ce93bc3a0606006e9893a1a', 'v0.manually_removed'),\n",
+       " ('00a6ffc16ce93bc3a0606006e9893a1a', 'v0.overall'),\n",
+       " ('01bb304d7bd835f8bbef7086b688e35e', 'v0.add')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scene_db.list_scene_version_pairs()[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "70b65a37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a demo of setting incorrect path\n",
+    "incorrect_root = \"/not_exist_directory/\"\n",
+    "\n",
+    "scene_db.set_scene_root(\n",
+    "    incorrect_root,\n",
+    "    overwrite=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "77164f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scene_db.list_scene_ids()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7a4856f",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "Overwrite Mechanism:\n",
+    "\n",
+    "Data paths for `argoverse2`, `patch_db`, and `scene_db` only need to be\n",
+    "configured once per machine. The system stores the paths so you don’t\n",
+    "need to re-specify them every time you run a program.\n",
+    "\n",
+    "On multiple machines, each PC should set its own paths once (unless they\n",
+    "share an identical directory layout, in which case deployment can be\n",
+    "automated).\n",
+    "\n",
+    "The overwrite argument is provided only when you intentionally want to\n",
+    "replace the stored paths with new ones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "14db4987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "internal_file = argoverse2.__file__\n",
+    "internal_file = os.path.dirname(internal_file)\n",
+    "internal_file = os.path.join(internal_file, \"../config.json\")\n",
+    "\n",
+    "\n",
+    "def print_json(f):\n",
+    "    with open(f, \"r\") as fin:\n",
+    "        data = json.load(fin)\n",
+    "    print(json.dumps(data, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d73c8514",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"sensor_dataset_root\": \"<a path to the sensor dataset root>\",\n",
+      "    \"scene_dataset_root\": \"<a path to the change point cloud dataset root>\",\n",
+      "    \"patch_dataset_root\": \"<a path to the patch dataset root>\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# By Default, `argoverse2`, `patch_db`, and `scene_db` will initialize\n",
+    "# themselves by these values.\n",
+    "\n",
+    "print_json(internal_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9469dbe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_dataset_root = \"/home/chad/Data/ArgoVerse/sensor/\"\n",
+    "argoverse2.set_sensor_root(\n",
+    "    sensor_dataset_root,\n",
+    "    overwrite=False,\n",
+    ")\n",
+    "\n",
+    "patch_dataset_root = \"/home/chad/Data/ArgoVerse/changed_pcd/patches/\"\n",
+    "patch_db.set_patch_root(\n",
+    "    patch_dataset_root,\n",
+    "    overwrite=False,\n",
+    ")\n",
+    "\n",
+    "scene_dataset_root = \"/home/chad/Data/ArgoVerse/changed_pcd/changed_pcd.2/\"\n",
+    "scene_db.set_scene_root(\n",
+    "    scene_dataset_root,\n",
+    "    overwrite=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "780a3cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"sensor_dataset_root\": \"<a path to the sensor dataset root>\",\n",
+      "    \"scene_dataset_root\": \"<a path to the change point cloud dataset root>\",\n",
+      "    \"patch_dataset_root\": \"<a path to the patch dataset root>\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if overwrite is set to False, the above settings will not persist\n",
+    "# after restarting the program\n",
+    "print_json(internal_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bf8723e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "argoverse2.set_sensor_root(\n",
+    "    sensor_dataset_root,\n",
+    "    overwrite=True,\n",
+    ")\n",
+    "\n",
+    "patch_db.set_patch_root(\n",
+    "    patch_dataset_root,\n",
+    "    overwrite=True,\n",
+    ")\n",
+    "\n",
+    "scene_db.set_scene_root(\n",
+    "    scene_dataset_root,\n",
+    "    overwrite=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "823200e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"sensor_dataset_root\": \"/home/chad/Data/ArgoVerse/sensor/\",\n",
+      "    \"scene_dataset_root\": \"/home/chad/Data/ArgoVerse/changed_pcd/changed_pcd.2/\",\n",
+      "    \"patch_dataset_root\": \"/home/chad/Data/ArgoVerse/changed_pcd/patches/\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if overwrite is set to True, the above settings will persist after\n",
+    "# restarting the program\n",
+    "print_json(internal_file)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39.scene-etk",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -120,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
